# discord_amp5

./: CGCMessage.py  FFCMessage.py  SystemMessage.py  main.py  participation_log.json  pyproject.toml  requirements.txt  webserver.py
.pythonlibs/: pyvenv.cfg
