[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.0",
    "discord-py>=2.4.0",
    "fastapi>=0.115.5",
    "flask>=3.1.0",
    "openai>=1.54.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
]
